css responsive on desktop/partially responsive on mobile; need to fix mapcontainer on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,12 +29,14 @@ nav {
 }
 
 .game {
-  width: 100vw;
+  width: 50%;
   height: calc(90vh - 170px);
   display: flex;
   align-items: center;
   padding-top: 50px;
   flex-direction: row;
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
 
 .board {
@@ -81,16 +83,14 @@ nav {
 }
 
 .keyboard {
-  display: inline-block;
-  width: 500px;
-  height: 100vh;
-  margin-top: 50vh;
-  margin-left: 45%;
+  width: 50%;
+  height: calc(130vh - 170px);
+  margin-left: 2%;
   position: fixed;
+  transform: translate(0%, -30%);
 }
 
 .line1 {
-  flex: 33%;
   display: flex;
   flex-direction: row;
   display: flex;
@@ -102,7 +102,7 @@ nav {
   flex: 33%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content:center;
   margin: 5px;
 }
 
@@ -371,19 +371,6 @@ nav {
   transform: translateY(0);
 }
 
-
-/* .heart {
-  display: flex;
-  justify-content: flex-start;
-  font-size: smaller;
-}
-
-.endHeart {
-  display: flex;
-  justify-content: center;
-  font-size: smaller;
-} */
-
 .soupWin {
   opacity: 1;
   height: fit-content;
@@ -399,25 +386,25 @@ nav {
 
 .mapContainer {
   display: flex;
-  /* justify-content: flex-start;
-  align-items: flex-start; */
+  flex-direction: row;
   background-color: black;
-  height:min-content;
-  width: 500px;
+  height: 100%;
+  width: 100%;
   background-color: #3b4545;
   background-color: rgba(145, 173, 173, 0.16);
   border-radius: 15px;
 }
 
-.mapDiv {
+/* .mapDiv {
   display: flex;
-}
+} */
 
 .sam {
   height: 75px;
   width: fit-content;
   background-color: #76aaa868;
   border-radius: 15px;
+  margin-right: 90%;
 }
 
 .stage {
@@ -440,15 +427,15 @@ nav {
   margin-left: 5%;
   margin-right: 5%;
   height: 45px;
-  width: 45px
+  width: 45px;
 }
 
 .cauldronCard {
   display: flex;
   background-color: black;
-  height: fit-content;
-  align-items: flex-end;
-  justify-content: baseline;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
   flex-direction:column;
   background-color: #3b4545;
   background-color: rgba(145, 173, 173, 0.16);
@@ -507,7 +494,8 @@ nav {
   display: flex;
   justify-content: center;
   background-color: #355a5a80;
-  height: 7vh;
+  height: fit-content;
+  width: 100%;
   padding: 3%;
   font-size: 14px;
   border-radius: 15px;
@@ -703,6 +691,7 @@ input[type="radio"]{
     touch-action: manipulation;
     /* vertical-align: baseline; */
     width: auto;
+    z-index: 999;
   }
   
   .button-7:hover,
@@ -908,6 +897,7 @@ button {
       bottom: 5%;
       margin-left: 0;
       position: fixed;
+      transform: translate(0%, 0%);
     }
     .board {
       height: 25vh;
@@ -961,7 +951,6 @@ button {
       align-items: center;
     }
     }
-
 
     @media screen and (max-width: 900px) {
       .currentPosition {
